// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomInput /> renders correctly with a label 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#666666",
        "fontSize": 16,
        "marginBottom": 8,
      }
    }
  >
    Test Label
  </Text>
  <TextInput
    onChangeText={[MockFunction]}
    placeholder="Input with label"
    placeholderTextColor="#666666"
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cccccc",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#333333",
          "fontSize": 16,
          "height": 50,
          "marginBottom": 16,
          "paddingHorizontal": 16,
        },
        null,
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`<CustomInput /> renders correctly with a predefined value 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "width": "100%",
    }
  }
>
  <TextInput
    onChangeText={[MockFunction]}
    placeholder="Should have value"
    placeholderTextColor="#666666"
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cccccc",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#333333",
          "fontSize": 16,
          "height": 50,
          "marginBottom": 16,
          "paddingHorizontal": 16,
        },
        null,
        undefined,
      ]
    }
    value="Predefined Value"
  />
</View>
`;

exports[`<CustomInput /> renders correctly with an error message 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#666666",
        "fontSize": 16,
        "marginBottom": 8,
      }
    }
  >
    Input with Error
  </Text>
  <TextInput
    onChangeText={[MockFunction]}
    placeholder="Enter text"
    placeholderTextColor="#666666"
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cccccc",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#333333",
          "fontSize": 16,
          "height": 50,
          "marginBottom": 16,
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "#dc3545",
        },
        undefined,
      ]
    }
    value="invalid input"
  />
  <Text
    style={
      {
        "color": "#dc3545",
        "fontSize": 14,
        "marginBottom": 8,
        "marginTop": 4,
      }
    }
  >
    This field is required
  </Text>
</View>
`;

exports[`<CustomInput /> renders correctly with default props 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "width": "100%",
    }
  }
>
  <TextInput
    onChangeText={[MockFunction]}
    placeholder="Test Input"
    placeholderTextColor="#666666"
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cccccc",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#333333",
          "fontSize": 16,
          "height": 50,
          "marginBottom": 16,
          "paddingHorizontal": 16,
        },
        null,
        undefined,
      ]
    }
    value=""
  />
</View>
`;
